# multi-blog

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN_ENHANCEMENTS.md  DOMAIN_MANAGEMENT.md  Makefile  README.md  REFACTORING_SUMMARY.md  SWR_INTEGRATION.md  biome.json  debug-auth-quick.js  debug-auth.js  dev.sh  docker.sh  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  tailwind.config.js  tsconfig.base.json  tsconfig.json
api/: .env.example  Cargo.toml  README.md  TESTING.md  docker-compose.yml  final_curl_tests.sh  fix_db.sql  generate_hashes.rs  sample_data.sql  simple_curl_test.sh  test.sh  test_api.sh  updated_curl_tests.sh  working_curl_tests.sh
api/migrations/: 0006_skip_migration_4.sql  001_initial_schema.sql  002_add_user_preferences.sql  003_update_user_permissions.sql
api/monitoring/grafana/dashboards/: api-monitoring-working.json  api-monitoring.json  database-performance.json
api/scripts/: load-test.sh
api/src/: lib.rs  main.rs  middleware.rs  test_utils.rs
api/src/extractors/: domain.rs
api/src/handlers/: admin.rs  analytics.rs  auth.rs  blog.rs  mod.rs  session.rs  session_new.rs  session_old.rs
api/src/middleware/: mod.rs  rate_limit.rs
api/src/services/: mod.rs  session_tracking.rs
api/src/utils/: mod.rs  query_builder.rs  tracing.rs
api/src/validation/: custom.rs  mod.rs
api/tests/: admin_tests.rs  analytics_tests.rs  blog_tests.rs  middleware_tests.rs
docs/: ANALYTICS_API.md  ANALYTICS_QUICK_REFERENCE.md  ANALYTICS_SYSTEM.md  API_CONFIGURATION.md  MONITORING_SETUP.md  NX_MIGRATION.md  (+2 more)
(+210 files in other folders)
